--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/ngx-toastr/toastr.css" 
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
@@ -39,6 +40,7 @@
               "node_modules/@popperjs/core/dist/umd/popper.min.js",
           
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
+             
             ]
           },
           "configurations": {
